css/components/viewport.css
[data-component~="viewport"] {
    --top-nav-height: 80px;
    background: white;
    padding: 15px;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
    display: flex;
    flex-direction: column;
    height: 100vh;
    padding-bottom: 100px;
    overflow: auto;
    overflow-x: hidden;
}

[data-component~="viewport"]:after {
    content: '';
    display: block;
    width: 100%;
    height: 200px;
    background: white;
}

[data-component~="viewport"] .view-timeline,
[data-component~="viewport"] .view-tinder {
    margin-top: var(--top-nav-height);
}

[data-component~="viewport"].timeline-view .view-timeline,
[data-component~="viewport"].timeline-view #tinder,
[data-component~="viewport"].tinder-view .view-tinder,
[data-component~="viewport"].tinder-view #timeline {
    display: block;
}

[data-component~="viewport"].timeline-view .view-tinder,
[data-component~="viewport"].timeline-view #timeline,
[data-component~="viewport"].tinder-view .view-timeline,
[data-component~="viewport"].tinder-view #tinder {
    display: none;
}

[data-component~="viewport"].timeline-view {
    padding-left: 0;
    padding-right: 0;
    overflow-x: hidden;
}

[data-component~="viewport"] ul.view-timeline {
    list-style: none;
    padding: 0;
    margin: 0;
}

@media (prefers-color-scheme: dark) {
    [data-component~="viewport"] {
        background: black;
    }
    [data-component~="viewport"]:after {
        background: black;
    }
}

